--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "power-belt": "https://github.com/bjoyx/power-belt.git",
-    "snabbdom": "^0.6.9"
+    "snabbdom": "^0.6.9",
+    "typestyle": "^1.3.4"
   },
   "devDependencies": {
     "@types/chai": "^3.5.2",
