--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ben Lambert",
   "license": "MIT",
   "scripts": {
-    "install": "npm run build",
+    "postinstall": "npm run build",
     "build": "tsc -d --outDir build src/index.ts",
     "lint": "tslint -p tsconfig.json --type-check src/index.ts test/index.test.ts",
     "test": "mocha-webpack",
