--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "power-belt": "https://github.com/chaabaj/power-belt.git",
-    "snabbdom": "^0.7.0",
+    "snabbdom": "https://github.com/chaabaj/snabbdom.git",
     "typestyle": "^1.3.4"
   },
   "devDependencies": {
