--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ben Lambert",
   "license": "MIT",
   "scripts": {
-    "postinstall": "tsc -d --outDir build src/index.ts",
+    "postinstall": "tsc -d --outDir build",
     "lint": "tslint -p tsconfig.json --type-check src/index.ts test/index.test.ts",
     "test": "mocha-webpack",
     "test:watch": "npm run test -- --watch",
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "power-belt": "https://github.com/chaabaj/power-belt.git",
-    "snabbdom": "https://github.com/chaabaj/snabbdom.git",
+    "inferno": "^3.10.0",
+    "inferno-create-class": "^3.10.0",
+    "inferno-component": "^3.10.1",
+    "inferno-create-element": "^3.10.0",
     "typestyle": "^1.3.4"
   },
   "devDependencies": {
