fix power-dom inferno bindings

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ben Lambert",
   "license": "MIT",
   "scripts": {
-    "postinstall": "tsc -d --outDir build",
+    "postinstall": "tsc -d",
     "lint": "tslint -p tsconfig.json --type-check src/index.ts test/index.test.ts",
     "test": "mocha-webpack",
     "test:watch": "npm run test -- --watch",
