--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "inferno-create-class": "^3.10.0",
     "inferno-component": "^3.10.1",
     "inferno-create-element": "^3.10.0",
-    "typestyle": "^1.3.4"
+    "typestyle": "^1.3.4",
+    "lodash": "^4.17.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.0",
     "@types/chai": "^3.5.2",
     "@types/mocha": "^2.2.41",
     "chai": "^3.5.0",
