--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "tsc -d",
+    "build": "tsc -d",
     "lint": "tslint -p tsconfig.json --type-check src/index.ts test/index.test.ts",
     "test": "mocha-webpack",
     "test:watch": "npm run test -- --watch",
@@ -16,8 +17,6 @@
   "dependencies": {
     "power-belt": "https://github.com/chaabaj/power-belt.git",
     "inferno": "^3.10.0",
-    "inferno-create-class": "^3.10.0",
-    "inferno-component": "^3.10.1",
     "inferno-create-element": "^3.10.0",
     "typestyle": "^1.3.4",
     "lodash": "^4.17.0"
